--- a/projet/package.json
+++ b/projet/package.json
@@ -18,6 +18,7 @@
     "@angular/common": "~11.0.4",
     "@angular/compiler": "~11.0.4",
     "@angular/core": "~11.0.4",
+    "@angular/flex-layout": "^10.0.0-beta.32",
     "@angular/forms": "~11.0.4",
     "@angular/material": "^11.2.13",
     "@angular/platform-browser": "~11.0.4",
