--- a/projet/package.json
+++ b/projet/package.json
@@ -64,6 +64,7 @@
     "ng2-charts": "^2.2.3",
     "ngx-barcode": "^0.3.0",
     "ngx-material-file-input": "^0.3.1",
+    "ngx-qrcode2": "^9.0.0",
     "ngx-spinner": "^11.0.2",
     "ngx-swiper-wrapper": "^10.0.0",
     "numeric-keyboard": "^0.7.0",
